@@ -1,0 +1,6 @@
+---
+Name: libblah
+Bug-Database: https://github.com/example/blah/issues
+Bug-Submit: https://github.com/example/blah/issues/new
+Repository: https://github.com/example/blah.git
+Repository-Browse: https://github.com/example/blah
